--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -16,7 +16,7 @@
       </li>
       <li class="nav-item">
           <a class="{% if request.path == path_to_adding_records %}active{% endif %} nav-link" href="{{ path_to_adding_records }}">
-              Añadir Compra<span class="sr-only">(current)</span>
+              Sensores<span class="sr-only">(current)</span>
           </a>
       </li>
       <li class="nav-item">
