--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,7 +13,7 @@
 
 
 
-    <title>Home{% block title %}{% endblock %}</title>
+    <title>CC{% block title %}{% endblock %}</title>
   </head>
   <body>
 
