--- a/src/products/templates/products/add.html
+++ b/src/products/templates/products/add.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <hr>
-AÑADIR COMPRA<hr>
+COMPRAR SENSOR<hr>
 
 {% if added_message %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <strong>{{ added_message }}</strong>.
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+        <strong>{{ added_message }}</strong>.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
 {% endif %}
 <form class="form-group" action="" method="POST">
