--- a/src/customers/templates/customers/main.html
+++ b/src/customers/templates/customers/main.html
@@ -9,9 +9,9 @@
 </h1>
 
 <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-12 col-md-6">
+    <div class="col text-center">
         {% if graph %}
-        <img src="data:image/png; base64, {{ graph | safe }}">
+            <img class="img-fluid" alt="Responsive image" src="data:image/png; base64, {{ graph | safe }}">
         {% endif %}
     </div>
 </div>
