--- a/src/products/templates/products/sales.html
+++ b/src/products/templates/products/sales.html
@@ -5,9 +5,9 @@
 {% block content %}
 <h1>Ventas</h1>
 <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-12 col-md-6">
+    <div class="col text-center">
         {% if graph %}
-        <img src="data:image/png; base64, {{ graph | safe }}">
+            <img class="img-fluid" alt="Responsive image" src="data:image/png; base64, {{ graph | safe }}">
         {% endif %}
     </div>
 </div>
