--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,23 +1,28 @@
 {% load static %}
+{% url 'login' as path_to_login %}
+{% url 'logout' as path_to_logout %}
 {% url 'products:main-products-view' as path_to_performance %}
 {% url 'products:add_purchase_view' as path_to_adding_records %}
 {% url 'csvs:upload-view' as path_to_upload %}
 {% url 'customers:main-customers-view' as path_to_customers %}
 {% url 'products:sales_view' as path_to_sales %}
+{% url 'home' as path_to_home %}
 
 
 
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="{{path_to_home}}"><span class="site-heading-lower">
+    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/logo.png' %}" width="50" height="50" alt=""></span>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    
-    <a class="navbar-brand" href="#"><span class="site-heading-lower">
-      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/logo.png' %}" width="40" height="40" alt=""></span>
-    </a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+  
+
+  {% if request.user.is_authenticated %}
+  <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mt-2 mt-lg-0 justify-content-end">
       <li class="nav-item">
           <a class="{% if request.path == path_to_performance %}active{% endif %} nav-link" href="{{ path_to_performance }}">
               Performance<span class="sr-only">(current)</span>
@@ -32,7 +37,7 @@
         <a class="{% if request.path == path_to_sales %}active{% endif %} nav-link" href="{{ path_to_sales }}">
             Ventas<span class="sr-only">(current)</span>
         </a>
-    </li>
+      </li>
       <li class="nav-item">
           <a class="{% if request.path == path_to_adding_records %}active{% endif %} nav-link" href="{{ path_to_adding_records }}">
               Comprar<span class="sr-only">(current)</span>
@@ -44,12 +49,22 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Salir</a>
+        <a class="{% if request.path == path_to_logout %}active{% endif %} nav-link" href="{{ path_to_logout }}">Salir</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="..." aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
   </div>
+
+  {% else %}
+  <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mt-2 mt-lg-0 justify-content-end">
+      <li class="nav-item">
+        <a class="{% if request.path == path_to_login %}active{% endif %} nav-link" href="{{ path_to_login }}">
+          Iniciar Sesión
+        </a>
+      </li>
+    </ul>
+  </div>
+  {% endif %}
+    
+  
 </nav>
