--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,7 +13,7 @@
 <div class="row justify-content-center">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <a href="#">
-            <img src="{% static 'img/main_img.jpeg' %}" alt="HYDRYUM" width="1280" height="667" role="presentation" class="img-fluid atto_image_button_text-bottom rounded">
+            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/main_img.jpeg' %}" alt=""></span>
         </a>
     </div>
 </div>
